fix: se uniformiza esquema de ads y favs
